[gd_scene load_steps=50 format=3 uid="uid://crvlf6uaciahe"]

[ext_resource type="Script" path="res://player/Player.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://dp0ahyrcjqi71" path="res://player/camera/ControllableCamera.tscn" id="2"]
[ext_resource type="PackedScene" uid="uid://cvxcmq4sosvbr" path="res://player/model/CharacterModel.tscn" id="2_oemi3"]
[ext_resource type="PackedScene" path="res://player/controls/Controls.tscn" id="3"]
[ext_resource type="Script" path="res://player/states/Stopped.gd" id="5"]
[ext_resource type="Script" path="res://player/state_machine/StateMachine.gd" id="5_4tq5p"]
[ext_resource type="Script" path="res://player/states/Running.gd" id="6"]
[ext_resource type="Script" path="res://player/states/Jumping.gd" id="7"]
[ext_resource type="Script" path="res://player/states/Dashing.gd" id="8"]
[ext_resource type="Script" path="res://player/states/OnGround.gd" id="9"]
[ext_resource type="Script" path="res://player/states/InAir.gd" id="10"]
[ext_resource type="Script" path="res://player/states/Falling.gd" id="11"]
[ext_resource type="Script" path="res://player/states/PrimaryAttack.gd" id="11_dt8j7"]
[ext_resource type="Script" path="res://player/states/RunningAttack.gd" id="11_vo5c4"]
[ext_resource type="Script" path="res://player/states/Crouching.gd" id="12"]

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_42fik"]
animation = &"unarmed-jump-up"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_04fiq"]
animation = &"Sword_Attack_1"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_63c4o"]
animation = &"Sword_Attack_2"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_l512n"]
animation = &"Sword_Attack_3"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_0se50"]
animation = &"Running_Sword_Attack"

[sub_resource type="AnimationNodeTransition" id="AnimationNodeTransition_s6avu"]
xfade_time = 0.1
input_0/name = "primary_attack_1"
input_0/auto_advance = false
input_0/reset = true
input_1/name = "primary_attack_2"
input_1/auto_advance = false
input_1/reset = true
input_2/name = "primary_attack_3"
input_2/auto_advance = false
input_2/reset = true
input_3/name = "running_attack"
input_3/auto_advance = false
input_3/reset = true

[sub_resource type="AnimationNodeAnimation" id="14"]
animation = &"unarmed-crouch-idle"

[sub_resource type="AnimationNodeAnimation" id="15"]
animation = &"unarmed-crouch-run"

[sub_resource type="AnimationNodeBlendSpace1D" id="30"]
blend_point_0/node = SubResource("14")
blend_point_0/pos = 0.0
blend_point_1/node = SubResource("15")
blend_point_1/pos = 1.0

[sub_resource type="AnimationNodeOneShot" id="AnimationNodeOneShot_xnsw3"]
fadein_time = 0.1
fadeout_time = 0.1

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_r7aer"]
animation = &"unarmed-jump-down"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_xv5f5"]
animation = &"unarmed-jump"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_rout0"]
xfade_time = 0.1

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_broob"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_njbj0"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_d0nsn"]
states/unarmed-jump/node = SubResource("AnimationNodeAnimation_xv5f5")
states/unarmed-jump/position = Vector2(532, -4)
states/unarmed-jump-down/node = SubResource("AnimationNodeAnimation_r7aer")
states/unarmed-jump-down/position = Vector2(705, 101)
transitions = ["unarmed-jump", "unarmed-jump-down", SubResource("AnimationNodeStateMachineTransition_rout0"), "unarmed-jump-down", "End", SubResource("AnimationNodeStateMachineTransition_broob"), "Start", "unarmed-jump", SubResource("AnimationNodeStateMachineTransition_njbj0")]
graph_offset = Vector2(-30, -56)

[sub_resource type="AnimationNodeAnimation" id="32"]
animation = &"Idle"

[sub_resource type="AnimationNodeAnimation" id="33"]
animation = &"Running"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_8fxmv"]
animation = &"Walk"

[sub_resource type="AnimationNodeBlendSpace1D" id="34"]
blend_point_0/node = SubResource("32")
blend_point_0/pos = 0.0
blend_point_1/node = SubResource("33")
blend_point_1/pos = 1.0
blend_point_2/node = SubResource("AnimationNodeAnimation_8fxmv")
blend_point_2/pos = 0.5
min_space = 0.0

[sub_resource type="AnimationNodeTransition" id="35"]
xfade_time = 0.2
input_0/name = "on-ground"
input_0/auto_advance = false
input_0/reset = true
input_1/name = "in-air"
input_1/auto_advance = false
input_1/reset = true
input_2/name = "crouching"
input_2/auto_advance = false
input_2/reset = true
input_3/name = "swimming"
input_3/auto_advance = false
input_3/reset = true
input_4/name = "surging"
input_4/auto_advance = false
input_4/reset = true
input_5/name = "attack"
input_5/auto_advance = false
input_5/reset = true

[sub_resource type="AnimationNodeAnimation" id="48"]
animation = &"unarmed-surge-charge"

[sub_resource type="AnimationNodeAnimation" id="49"]
animation = &"unarmed-surge-release"

[sub_resource type="AnimationNodeBlendSpace1D" id="47"]
blend_point_0/node = SubResource("48")
blend_point_0/pos = 0.0
blend_point_1/node = SubResource("49")
blend_point_1/pos = 0.3

[sub_resource type="AnimationNodeAnimation" id="45"]
animation = &"unarmed-swim-idle"

[sub_resource type="AnimationNodeAnimation" id="46"]
animation = &"unarmed-swim"

[sub_resource type="AnimationNodeBlendSpace1D" id="44"]
blend_point_0/node = SubResource("45")
blend_point_0/pos = 0.0
blend_point_1/node = SubResource("46")
blend_point_1/pos = 1.0

[sub_resource type="AnimationNodeBlendTree" id="36"]
graph_offset = Vector2(-452.376, -45.6334)
nodes/Animation/node = SubResource("AnimationNodeAnimation_0se50")
nodes/Animation/position = Vector2(-560, 940)
"nodes/Animation 2/node" = SubResource("AnimationNodeAnimation_42fik")
"nodes/Animation 2/position" = Vector2(-800, 200)
"nodes/Animation 3/node" = SubResource("AnimationNodeAnimation_04fiq")
"nodes/Animation 3/position" = Vector2(-560, 660)
"nodes/Animation 4/node" = SubResource("AnimationNodeAnimation_63c4o")
"nodes/Animation 4/position" = Vector2(-740, 760)
"nodes/Animation 5/node" = SubResource("AnimationNodeAnimation_l512n")
"nodes/Animation 5/position" = Vector2(-740, 880)
nodes/AttackState/node = SubResource("AnimationNodeTransition_s6avu")
nodes/AttackState/position = Vector2(-260, 700)
nodes/Crouching/node = SubResource("30")
nodes/Crouching/position = Vector2(-360, 260)
nodes/Jump/node = SubResource("AnimationNodeOneShot_xnsw3")
nodes/Jump/position = Vector2(-560, 80)
nodes/Jumping/node = SubResource("AnimationNodeStateMachine_d0nsn")
nodes/Jumping/position = Vector2(-740, 60)
nodes/OnGround/node = SubResource("34")
nodes/OnGround/position = Vector2(-480, -80)
nodes/RootState/node = SubResource("35")
nodes/RootState/position = Vector2(-20, 140)
nodes/Surging/node = SubResource("47")
nodes/Surging/position = Vector2(-360, 540)
nodes/Swimming/node = SubResource("44")
nodes/Swimming/position = Vector2(-360, 400)
nodes/output/position = Vector2(540, 140)
node_connections = [&"output", 0, &"RootState", &"AttackState", 0, &"Animation 3", &"AttackState", 1, &"Animation 4", &"AttackState", 2, &"Animation 5", &"AttackState", 3, &"Animation", &"Jump", 0, &"Jumping", &"Jump", 1, &"Animation 2", &"RootState", 0, &"OnGround", &"RootState", 1, &"Jump", &"RootState", 2, &"Crouching", &"RootState", 3, &"Swimming", &"RootState", 4, &"Surging", &"RootState", 5, &"AttackState"]

[sub_resource type="StandardMaterial3D" id="16"]
transparency = 1
blend_mode = 1
cull_mode = 2
shading_mode = 0
vertex_color_use_as_albedo = true

[sub_resource type="Gradient" id="19"]
offsets = PackedFloat32Array(0.038, 0.483, 0.908)
colors = PackedColorArray(1, 0.654902, 0, 1, 1, 0.945098, 0.152941, 1, 1, 0.988235, 0.827451, 0)

[sub_resource type="GradientTexture2D" id="20"]
gradient = SubResource("19")

[sub_resource type="ParticleProcessMaterial" id="17"]
emission_shape = 3
emission_box_extents = Vector3(0.281, 0.524, 0)
direction = Vector3(0, 0, 1)
spread = 0.0
gravity = Vector3(0, 0, 0)
color_ramp = SubResource("20")

[sub_resource type="BoxMesh" id="18"]
size = Vector3(0.04, 0.04, 2)

[sub_resource type="CapsuleShape3D" id="37"]
radius = 0.3
height = 1.8

[node name="Player" type="CharacterBody3D" groups=["player"]]
script = ExtResource("1")

[node name="Skin" type="Node3D" parent="."]

[node name="CharacterModel" parent="Skin" instance=ExtResource("2_oemi3")]

[node name="Skeleton3D" parent="Skin/CharacterModel/main_character/Armature" index="0"]
bones/0/position = Vector3(-0.117389, 1.87192, -78.2113)
bones/0/rotation = Quaternion(-0.713438, -0.00393117, -0.0470989, 0.699123)
bones/1/rotation = Quaternion(-0.0995383, -0.00906181, 0.021643, 0.994757)
bones/2/rotation = Quaternion(0.0235851, -0.00588236, 0.0382148, 0.998974)
bones/3/position = Vector3(1.07219e-07, 9.22586, -2.12043e-06)
bones/3/rotation = Quaternion(0.115063, 0.00139711, 0.0328507, 0.992814)
bones/4/rotation = Quaternion(-0.042079, -0.00506795, -0.0118935, 0.999031)
bones/5/position = Vector3(7.41915e-09, 5.05646, 0.719562)
bones/5/rotation = Quaternion(0.0242446, -0.0161065, -0.045973, 0.998519)
bones/7/rotation = Quaternion(-0.631312, -0.403856, 0.502173, -0.431473)
bones/8/position = Vector3(1.29551e-06, 7.86576, 1.55272e-06)
bones/8/rotation = Quaternion(0.538489, 0.00646974, 0.0364605, 0.841818)
bones/9/position = Vector3(5.08953e-08, 18.982, 1.45533e-06)
bones/9/rotation = Quaternion(0.00490897, -0.0135362, 0.170689, 0.98522)
bones/10/position = Vector3(-1.78726e-06, 18.4362, -1.20403e-07)
bones/10/rotation = Quaternion(0.0470951, -0.176346, 0.0258606, 0.982861)
bones/11/position = Vector3(-1.42275, 3.08626, 1.28371)
bones/11/rotation = Quaternion(0.152726, 0.160281, 0.239403, 0.945342)
bones/12/position = Vector3(-3.35965e-06, 2.92917, 6.83298e-07)
bones/12/rotation = Quaternion(-0.00890401, -0.0764029, -0.171616, 0.982157)
bones/13/position = Vector3(-2.54656e-06, 2.65227, 2.44661e-05)
bones/13/rotation = Quaternion(0.0022592, -0.0110599, -0.0201162, 0.999734)
bones/14/position = Vector3(-1.6309e-06, 2.70566, -6.07523e-06)
bones/15/position = Vector3(-1.91078, 7.46399, -1.01298)
bones/15/rotation = Quaternion(0.190286, -0.00488679, -0.0600296, 0.979879)
bones/16/position = Vector3(-2.77343e-07, 3.3, -1.55225e-07)
bones/16/rotation = Quaternion(0.192602, -0.0018951, -0.0347379, 0.98066)
bones/17/position = Vector3(-3.90502e-07, 2, -2.22914e-06)
bones/17/rotation = Quaternion(0.0554735, -0.000199141, -0.00941677, 0.998416)
bones/18/position = Vector3(1.45646e-07, 2.33434, 1.51527e-06)
bones/19/position = Vector3(-0.21969, 7.48592, -1.40666)
bones/19/rotation = Quaternion(0.253018, -0.0127566, -0.0972529, 0.962476)
bones/20/position = Vector3(1.95366e-07, 3.6, -1.52833e-06)
bones/20/rotation = Quaternion(0.262252, -0.00479126, -0.0382619, 0.964229)
bones/21/position = Vector3(-2.27135e-07, 2.29999, 4.21913e-06)
bones/21/rotation = Quaternion(0.0655107, -8.73673e-06, -0.0141261, 0.997752)
bones/22/position = Vector3(3.98737e-07, 2.75205, -2.33271e-06)
bones/23/position = Vector3(1.08288, 7.11996, -1.51837)
bones/23/rotation = Quaternion(0.312815, -0.0448348, -0.159228, 0.935299)
bones/24/position = Vector3(5.75393e-07, 3.40001, 5.53129e-07)
bones/24/rotation = Quaternion(0.385786, -0.0058341, -0.0371037, 0.921823)
bones/25/position = Vector3(-6.24717e-07, 2, -6.79913e-06)
bones/25/rotation = Quaternion(0.0823797, 0.00111156, -0.015686, 0.996477)
bones/26/position = Vector3(8.64278e-07, 2.28072, -2.06648e-06)
bones/27/position = Vector3(2.43135, 6.57644, -1.18488)
bones/27/rotation = Quaternion(0.367857, -0.0423249, -0.201793, 0.906736)
bones/28/position = Vector3(-4.84293e-07, 3.4, 1.70177e-06)
bones/28/rotation = Quaternion(0.442033, -0.0086647, -0.0225359, 0.896674)
bones/29/position = Vector3(9.32283e-07, 1.70001, 3.88287e-06)
bones/29/rotation = Quaternion(0.0878147, -0.000138888, -0.021411, 0.995907)
bones/30/position = Vector3(-2.22613e-07, 1.65955, -1.49777e-07)
bones/31/rotation = Quaternion(0.594322, -0.445756, 0.539406, 0.396389)
bones/32/position = Vector3(7.24515e-07, 7.86572, 8.79175e-06)
bones/32/rotation = Quaternion(0.466041, -0.0100257, -0.0316969, 0.884139)
bones/33/position = Vector3(-4.911e-07, 18.982, -1.98883e-06)
bones/33/rotation = Quaternion(0.00526394, 0.00501983, -0.186294, 0.982467)
bones/34/position = Vector3(7.89844e-07, 18.4362, -3.65536e-06)
bones/34/rotation = Quaternion(0.0390877, 0.107935, 0.0390015, 0.992623)
bones/35/rotation = Quaternion(0.172315, -0.148526, -0.249016, 0.941402)
bones/36/position = Vector3(-1.90184e-06, 2.92916, 1.04805e-05)
bones/36/rotation = Quaternion(-0.0140476, 0.0759295, 0.174887, 0.981556)
bones/37/position = Vector3(1.45908e-06, 2.65238, 5.24399e-07)
bones/37/rotation = Quaternion(0.00543606, 0.0113711, 0.0155842, 0.999799)
bones/38/position = Vector3(-1.22906e-06, 2.70563, -4.1704e-05)
bones/39/position = Vector3(1.91078, 7.4639, -1.01299)
bones/39/rotation = Quaternion(0.200222, 0.0103689, 0.0707229, 0.97714)
bones/40/position = Vector3(1.85203e-07, 3.30009, 4.15401e-07)
bones/40/rotation = Quaternion(0.194978, 0.00166634, 0.0370729, 0.980105)
bones/41/position = Vector3(1.09622e-07, 2.00001, 5.88974e-07)
bones/41/rotation = Quaternion(0.0741105, 0.00114832, 0.00790694, 0.997218)
bones/42/position = Vector3(1.64565e-07, 2.33425, 5.03348e-06)
bones/43/position = Vector3(0.451775, 7.50449, -1.40599)
bones/43/rotation = Quaternion(0.306545, 0.0292852, 0.127531, 0.942819)
bones/44/position = Vector3(-1.29898e-07, 3.59989, -6.64204e-07)
bones/44/rotation = Quaternion(0.210117, 0.0582823, 0.0556415, 0.97435)
bones/45/position = Vector3(-6.61106e-07, 2.30003, 7.47074e-07)
bones/45/rotation = Quaternion(0.0837243, 0.000169041, 0.0168628, 0.996346)
bones/46/position = Vector3(1.16766e-07, 2.75213, 2.23973e-06)
bones/47/position = Vector3(-1.08288, 7.1199, -1.51799)
bones/47/rotation = Quaternion(0.378465, 0.0390085, 0.162621, 0.910383)
bones/48/position = Vector3(-1.89982e-07, 3.4, -1.14231e-06)
bones/48/rotation = Quaternion(0.234255, 0.000964075, 0.036054, 0.971506)
bones/49/position = Vector3(-5.01804e-07, 1.99994, -2.98664e-06)
bones/49/rotation = Quaternion(0.0758065, 0.000586041, 0.00526273, 0.997109)
bones/50/position = Vector3(5.72365e-07, 2.28075, -3.84614e-06)
bones/51/position = Vector3(-2.43135, 6.5764, -1.184)
bones/51/rotation = Quaternion(0.426585, 0.0639802, 0.234389, 0.871202)
bones/52/position = Vector3(1.54158e-06, 3.40001, -5.77738e-06)
bones/52/rotation = Quaternion(0.32212, 0.0128823, 0.0207428, 0.946384)
bones/53/position = Vector3(-1.67306e-06, 1.69999, 3.4668e-06)
bones/53/rotation = Quaternion(0.0972942, 0.00348368, 0.00832225, 0.995215)
bones/54/position = Vector3(-2.01867e-06, 1.65958, -9.39663e-08)
bones/55/position = Vector3(-3.03243, 5.32633, 0.515523)
bones/56/rotation = Quaternion(-0.0662905, 0.0790214, 0.991946, -0.0735174)
bones/57/position = Vector3(-3.00672e-07, 33.3812, 9.75904e-07)
bones/57/rotation = Quaternion(-0.231951, 0.0272753, 0.0205779, 0.972127)
bones/58/rotation = Quaternion(0.452556, 0.000318778, -0.0712521, 0.888885)
bones/59/rotation = Quaternion(0.463238, 0.00997383, 0.00696143, 0.88615)
bones/61/rotation = Quaternion(0.072861, 0.192568, 0.971771, -0.115198)
bones/62/rotation = Quaternion(-0.404914, -0.0495433, -0.00087569, 0.913011)
bones/63/position = Vector3(-6.74897e-07, 34.8929, 3.40955e-07)
bones/63/rotation = Quaternion(0.351967, -0.0231316, -0.0501411, 0.934382)
bones/64/position = Vector3(1.66474e-07, 11.5, 1.58697e-06)
bones/64/rotation = Quaternion(0.452039, 0.00484825, -0.000567827, 0.891985)

[node name="BoneAttachment3D" parent="Skin/CharacterModel/main_character/Armature/Skeleton3D" index="1"]
transform = Transform3D(0.0140119, 0.12027, 0.992642, 0.266642, 0.956342, -0.119636, -0.963694, 0.266357, -0.0186688, -17.3666, -0.146657, -66.2133)

[node name="AnimationTree" type="AnimationTree" parent="Skin"]
tree_root = SubResource("36")
anim_player = NodePath("../CharacterModel/main_character/AnimationPlayer")
active = true
parameters/AttackState/current_state = "primary_attack_1"
parameters/AttackState/transition_request = ""
parameters/AttackState/current_index = 0
parameters/Crouching/blend_position = 0.0
parameters/Jump/active = false
parameters/Jump/internal_active = false
parameters/Jump/request = 0
parameters/OnGround/blend_position = 0.211
parameters/RootState/current_state = "on-ground"
parameters/RootState/transition_request = ""
parameters/RootState/current_index = 0
parameters/Surging/blend_position = 0.0
parameters/Swimming/blend_position = 0.0

[node name="VfxDash" type="GPUParticles3D" parent="Skin"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.984, 1.12412)
material_override = SubResource("16")
emitting = false
amount = 16
lifetime = 0.3
one_shot = true
explosiveness = 1.0
randomness = 0.34
visibility_aabb = AABB(-1.39, -2.508, -3.479, 2.781, 5.015, 6.958)
local_coords = true
process_material = SubResource("17")
draw_pass_1 = SubResource("18")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.9, -4.37114e-09)
shape = SubResource("37")

[node name="CamRoot" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.1, 0)

[node name="ControllableCamera" parent="CamRoot" instance=ExtResource("2")]

[node name="Controls" parent="." instance=ExtResource("3")]

[node name="Movement" type="Node" parent="."]
script = ExtResource("5_4tq5p")
initial_state = NodePath("OnGround")

[node name="Crouching" type="Node" parent="Movement"]
script = ExtResource("12")

[node name="Stopped" type="Node" parent="Movement/Crouching"]
script = ExtResource("5")

[node name="Moving" type="Node" parent="Movement/Crouching"]
script = ExtResource("6")
move_speed = 4.0
sprint_speed = 4.0
turn_speed = 8.0
acceleration = 30.0
cam_follow_speed = 4.0

[node name="OnGround" type="Node" parent="Movement"]
script = ExtResource("9")

[node name="Stopped" type="Node" parent="Movement/OnGround"]
script = ExtResource("5")

[node name="Running" type="Node" parent="Movement/OnGround"]
script = ExtResource("6")
move_speed = 2.5
sprint_speed = 5.0

[node name="Dashing" type="Node" parent="Movement/OnGround"]
script = ExtResource("8")

[node name="RunningAttack" type="Node" parent="Movement/OnGround"]
script = ExtResource("11_vo5c4")

[node name="AttackTimer" type="Timer" parent="Movement/OnGround/RunningAttack"]
one_shot = true

[node name="PrimaryAttack" type="Node" parent="Movement/OnGround"]
script = ExtResource("11_dt8j7")

[node name="AttackTimer" type="Timer" parent="Movement/OnGround/PrimaryAttack"]
one_shot = true

[node name="InAir" type="Node" parent="Movement"]
script = ExtResource("10")

[node name="Falling" type="Node" parent="Movement/InAir"]
script = ExtResource("11")

[node name="Jumping" type="Node" parent="Movement/InAir"]
script = ExtResource("7")

[node name="Dashing" type="Node" parent="Movement/InAir"]
script = ExtResource("8")
dash_power = 180.0

[node name="DashTimer" type="Timer" parent="."]
one_shot = true

[connection signal="enemy_hit" from="Skin/CharacterModel/main_character/Armature/Skeleton3D/BoneAttachment3D/Sword" to="." method="_on_sword_enemy_hit"]
[connection signal="animation_finished" from="Skin/AnimationTree" to="Movement/OnGround/RunningAttack" method="_on_animation_tree_animation_finished"]
[connection signal="animation_finished" from="Skin/AnimationTree" to="Movement/OnGround/PrimaryAttack" method="_on_animation_tree_animation_finished"]
[connection signal="running_attack_anim_playing" from="Movement/OnGround/RunningAttack" to="Skin/CharacterModel/main_character/Armature/Skeleton3D/BoneAttachment3D/Sword" method="set_collision_active"]
[connection signal="running_attack_anim_playing" from="Movement/OnGround/RunningAttack" to="Movement/OnGround/PrimaryAttack" method="_on_running_attack_running_attack_anim_playing"]
[connection signal="timeout" from="Movement/OnGround/RunningAttack/AttackTimer" to="Movement/OnGround/RunningAttack" method="_on_attack_timer_timeout"]
[connection signal="attack_anim_playing" from="Movement/OnGround/PrimaryAttack" to="Skin/CharacterModel/main_character/Armature/Skeleton3D/BoneAttachment3D/Sword" method="set_collision_active"]
[connection signal="timeout" from="Movement/OnGround/PrimaryAttack/AttackTimer" to="Movement/OnGround/PrimaryAttack" method="_on_attack_timer_timeout"]

[editable path="Skin/CharacterModel"]
